# django-app

./: README.md  manage.py  pyproject.toml  tox.ini
tests/: settings.py  test_django_app.py
