[tool.poetry]
name = "django-app"
version = "1.0.0"
description = "Provide base template for django app package"
authors = ["JaeyoungHeo <jay.jaeyoung@gmail.com>"]
maintainers = ["JaeyoungHeo <jay.jaeyoung@gmail.com>"]
readme = "README.md"
repository = "https://github.com/8percent/django-app"
license = "MIT"
packages = [
    { include = "django_app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
django = "~3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
tox = "^3.25.1"
flake8 = "^5.0.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
black = "^22.6.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint Configurations
[tool.isort]
force_single_line = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*"]

[tool.black]
preview = "True"
line-length = "79"
target-version = ['py310']
skip-string-normalization = "True"
extend-exclude = '''
(
  migrations
)
'''

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.settings"
